--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -11,11 +11,11 @@
                 <p>Last Distance:<br>{moveDistance}</p>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             {actions}
             {movement}
             {edit}
-        </div>
+        </div> -->
     </div>
     <div class="col">
         <img class="img-fluid border border-info border-2" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
