Update ChangeRow template; fix transparency

--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -53,7 +53,7 @@
             <form id="selectPixelForm" hx-post="{harmonyURL}select_pixel" hx-target="#interactor">
                 <input type="hidden" name="selectedCamera" id="selectedCamera" value="{defaultCamera}">
                 <input type="hidden" name="selectedPixel" id="selectedPixel" value="">
-                <input type="hidden" name="secondPixel" id="secondPixel" value="">
+                <input type="hidden" name="appendPixel" id="appendPixel" value="false">
                 <input type="hidden" name="viewId" id="viewId" value="{viewId}">
             </form>
             <div id="GameWorldViewer">
