--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -19,6 +19,6 @@
         </div> -->
     </div>
     <div class="col">
-        <img class="img-fluid border border-info border-2" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
+        <img class="img-fluid border border-info border-2" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px; width:100%; max-height:100px; object-fit:contain;">
     </div>
 </div>
