--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -27,7 +27,7 @@
             </h4>
         </div>
         <div id="updateSessionForm" class="row justify-content-center mb-3" hidden>
-            <form action="/update_session_id" method="POST" class="form-inline">
+            <form action="{harmonyURL}update_session_id" method="POST" class="form-inline">
                 <input type="hidden" name="viewId" value="{viewId}">
                 <input type="text" name="newViewId" class="form-control mr-2" placeholder="New Session ID" required>
                 <button type="submit" class="btn btn-primary">Update</button>
@@ -84,10 +84,13 @@
 
                         const ctx = canvas.getContext('2d');
                         let isDragging = false;
+                        let potentialDrag = false;
+                        let dragStartPos = { x: 0, y: 0 };
                         let isClickCandidate = false;
                         let draggedObject = null;
                         let draggedPointIndex = -1;
                         const VERTEX_RADIUS = 5;
+                        const DRAG_THRESHOLD = 3;
 
                         function getNaturalDims() {
                             const currentCam = document.getElementById('selectedCamera').value;
@@ -145,7 +148,7 @@
                             // Draw edges
                             if (poly.length > 1) {
                                 ctx.beginPath();
-                                ctx.strokeStyle = `rgba(${r}, ${g}, ${b}, 0, 1)`;
+                                ctx.strokeStyle = `rgba(${r}, ${g}, ${b}, 1)`;
                                 ctx.lineWidth = 2;
                                 var transparency = 0.3;
                                 if (document.getElementById(`selectedCamera`).value == 'VirtualMap') {
@@ -215,15 +218,49 @@
                                 drawGroup(data.selectable, 180, 190, 205, drawnSet);
                             }
                             if (data.selection) {
+                                let firstCenter = null;
+                                if (data.selection.firstCell) {
+                                    const poly = getPoly(data.selection.firstCell);
+                                    if (poly) {
+                                        drawPoly(poly, scale, true, 255, 210, 70); // Gold for first
+                                        // Calculate center
+                                        let cx = 0, cy = 0;
+                                        poly.forEach(p => {
+                                            const pt = Array.isArray(p) ? { x: p[0], y: p[1] } : p;
+                                            cx += pt.x;
+                                            cy += pt.y;
+                                        });
+                                        firstCenter = { x: cx / poly.length, y: cy / poly.length };
+                                    }
+                                }
+
                                 if (data.selection.additionalCells) {
                                     data.selection.additionalCells.forEach(cell => {
                                         const poly = getPoly(cell);
-                                        if (poly) drawPoly(poly, scale, true, 255, 0, 255); // Magenta for additional
+                                        if (poly) {
+                                            drawPoly(poly, scale, true, 255, 0, 255); // Magenta for additional
+
+                                            // Draw line to first center
+                                            if (firstCenter) {
+                                                let cx = 0, cy = 0;
+                                                poly.forEach(p => {
+                                                    const pt = Array.isArray(p) ? { x: p[0], y: p[1] } : p;
+                                                    cx += pt.x;
+                                                    cy += pt.y;
+                                                });
+                                                const currentCenter = { x: cx / poly.length, y: cy / poly.length };
+
+                                                ctx.beginPath();
+                                                ctx.strokeStyle = "rgba(255, 255, 255, 0.8)";
+                                                ctx.lineWidth = 2;
+                                                ctx.setLineDash([5, 5]);
+                                                ctx.moveTo(firstCenter.x * scale.x, firstCenter.y * scale.y);
+                                                ctx.lineTo(currentCenter.x * scale.x, currentCenter.y * scale.y);
+                                                ctx.stroke();
+                                                ctx.setLineDash([]);
+                                            }
+                                        }
                                     });
-                                }
-                                if (data.selection.firstCell) {
-                                    const poly = getPoly(data.selection.firstCell);
-                                    if (poly) drawPoly(poly, scale, true, 255, 210, 70); // Gold for first
                                 }
                             }
                         }
@@ -245,8 +282,8 @@
                                         const p_screen = { x: p.x * scale.x, y: p.y * scale.y };
 
                                         if (dist(m, p_screen) <= VERTEX_RADIUS * 2) {
-                                            isDragging = true;
-                                            isClickCandidate = false; // It's a drag interaction
+                                            potentialDrag = true;
+                                            dragStartPos = m;
                                             draggedObject = name;
                                             draggedPointIndex = i;
                                             return;
@@ -257,10 +294,18 @@
                         };
 
                         canvas.onmousemove = function (e) {
-                            if (isDragging && draggedObject) {
-                                const m = getMousePos(e); // Screen coords
-                                const scale = getScale();
+                            const m = getMousePos(e); // Screen coords
+                            const scale = getScale();
 
+                            if (potentialDrag && !isDragging) {
+                                if (dist(m, dragStartPos) > DRAG_THRESHOLD) {
+                                    isDragging = true;
+                                    potentialDrag = false;
+                                    isClickCandidate = false;
+                                }
+                            }
+
+                            if (isDragging && draggedObject) {
                                 const objMap = data.objects[draggedObject];
                                 const poly = getPoly(objMap);
 
@@ -274,9 +319,6 @@
                                 }
                                 if (onUpdate) onUpdate(data);
                                 draw();
-                            } else {
-                                // If moving significantly without dragging, it's not a click
-                                // (Optional refinement, skipping for simplicity)
                             }
                         };
 
@@ -285,10 +327,13 @@
                                 isDragging = false;
                                 draggedObject = null;
                                 draggedPointIndex = -1;
-                            } else if (isClickCandidate) {
-                                // Trigger click
-                                if (onClick) onClick(e);
+                            } else {
+                                // Either Click Candidate (no object hit) OR Potential Drag (object hit but not moved)
+                                if (isClickCandidate || potentialDrag) {
+                                    if (onClick) onClick(e);
+                                }
                             }
+                            potentialDrag = false;
                             isClickCandidate = false;
                         };
 
@@ -409,7 +454,7 @@
                 <div id="interactor" class="row"></div>
                 <div id="objectTable" class="row">
                     <div id="objectFilterRetriever" hx-get="{harmonyURL}objects" hx-trigger="every 1s"
-                        hx-target="#objectFilterRetriever"></div>
+                        hx-include="#viewId" hx-target="#objectFilterRetriever"></div>
                 </div>
                 <hr>
                 <div class="row">
