Cookie session id

--- a/harmony/harmony_templates/HarmonyUser.html
+++ b/harmony/harmony_templates/HarmonyUser.html
@@ -20,6 +20,19 @@
     <div class="container">
         <h1 align="center">Harmony</h1>
         <hr>
+        <div class="row justify-content-center mb-3">
+            <h4>Session ID: {viewId}
+                <button class="btn btn-sm btn-outline-secondary"
+                    onclick="document.getElementById('updateSessionForm').hidden = !document.getElementById('updateSessionForm').hidden">Edit</button>
+            </h4>
+        </div>
+        <div id="updateSessionForm" class="row justify-content-center mb-3" hidden>
+            <form action="{harmonyURL}update_session_id" method="POST" class="form-inline">
+                <input type="hidden" name="viewId" value="{viewId}">
+                <input type="text" name="newViewId" class="form-control mr-2" placeholder="New Session ID" required>
+                <button type="submit" class="btn btn-primary">Update</button>
+            </form>
+        </div>
         <div class="row" style="min-width: 500px">
             <div class="container justify-content-center" align="center">
                 <h3 id="GameWorldHeader">Game World View -- {defaultCamera}</h3>
